# WoW-Raid-Team-Audit

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: refresh.yml
docs/: index.html
docs/2026-W16/: dashboard.html  data.json
docs/2026-W17/: dashboard.html  data.json
docs/2026-W18/: dashboard.html  data.json
docs/2026-W19/: dashboard.html  data.json
docs/2026-W20/: dashboard.html  data.json
docs/2026-W21/: dashboard.html  data.json
docs/2026-W22/: dashboard.html  data.json
docs/2026-W23/: dashboard.html  data.json
docs/2026-W24/: dashboard.html  data.json
docs/2026-W25/: dashboard.html  data.json
docs/2026-W26/: dashboard.html  data.json
docs/2026-W27/: dashboard.html  data.json
docs/2026-W28/: dashboard.html  data.json
docs/2026-W29/: dashboard.html  data.json
docs/2026-W30/: dashboard.html  data.json
fixtures/: team.json
src/wowaudit_bot/: __main__.py  blizzard_client.py  config.py  grading.py  models.py  reporting.py  wowaudit_client.py
src/wowaudit_bot/templates/: dashboard.html.j2  index.html.j2
